# postchi

./: .env  .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: release.yml
scripts/: release.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  project_files.rs
src/about/: about-dialog.tsx
src/active-environment/: active-environment.tsx  environment-context.tsx
src/app/about/: about-dialog.tsx
src/app/active-environment/: active-environment.tsx  environment-context.tsx
src/app/components/: variable-selector.tsx
src/components/: FileTree.tsx  HttpEditor.tsx  bullet.tsx  http-response-view.tsx  import-dialog.tsx  json-editor-tokens.ts  layout.tsx  license-dialog.tsx  new-project-dialog.tsx  new-quick-action-dialog.tsx  search-dialog.tsx  send-request-shortcut.tsx  settings-dialog.tsx  source-changes-dialog.tsx  window-controls.tsx
src/editors/: before-script-editor.tsx  environment-editor.tsx  load-text.ts  script-editor.tsx  use-auto-save.tsx
src/hooks/: file-watch.ts  persistent-state.ts  use-async.ts  use-file-tree.ts  use-file.ts  use-menu-trigger.ts  use-project-search.ts
src/http/: http-request-response.tsx  http-response-view.tsx
src/lib/: code-mirror-http.ts  http-language.ts  json-parser-utils.ts  lezer-test-utils.js  lezer-test-utils.ts  project-state.ts
src/preferences/: preferences.tsx
src/settings/: settings-window.tsx
src/theme-context/: theme-context.tsx
todo/: roadmap.md
(+233 files in other folders)
